syntax = "proto3";
option csharp_namespace = "Blog.Contract";

import "google/protobuf/timestamp.proto";

package post;

service PostServices {
  rpc GetPublishedPosts (GetPostsRequest) returns (GetPostsResponse);
  rpc GetPublishedPost (GetPostRequest) returns (Post);
  rpc GetPublishedPostsByCategory (GetPostsByCategoryRequest) returns (GetPostsResponse);
}

message GetPostsRequest {
  uint32 offset = 1;
  uint32 limit = 2;
}

message GetPostRequest {
  string slug = 1;
}

message GetPostsByCategoryRequest {
  string categorySlug = 1;
  uint32 offset = 2;
  uint32 limit = 3;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string description = 3;
  string content = 4;
  string coverImageUrl = 5;
  string slug = 6;
  google.protobuf.Timestamp publishedDate = 7;
  string tags = 8;
  string categorySlug = 9;
  string categoryName = 10;
}
